Made it into dark mode by default. got rid of the gaps around the background image, as well as fixing the image to match the designs. Made the main index file into a template file for all new pages to be based on. got rid of the unneeded index.css file and renamed index.html to template page.html

--- a/style.css
+++ b/style.css
@@ -1,18 +1,101 @@
-body {
-  background-color: lightgrey;
+.jacques-francois-shadow-regular {
+  font-family: "Jacques Francois Shadow", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
+.jacques-francois-regular {
+  font-family: "Jacques Francois", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  background-color: #272727;
+  margin: 0px;
+  border: 0px;
+}
+
+h1 {
+  margin: 0px;
+  background-image: url("Header\ BG.png");
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  background-size: cover;
+}
+
+/* From Uiverse.io by BHARGAVPATEL1244 */ 
+button{
+  outline: none;
+  cursor: pointer;
+  border: none;
+  padding: 0.9rem 2rem;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  position: relative;
+  display: inline-block;
+  letter-spacing: 0.05rem;
+  font-weight: 700;
+  font-size: 17px;
+  border-radius: 500px;
+  overflow: hidden;
+  background: white;
+  color: ghostwhite;
+ }
+ 
+ button span {
+  position: relative;
+  z-index: 10;
+  transition: color 0.4s;
+ }
+ 
+ button:hover span {
+  color: black;
+ }
+ 
+ button::before,
+ button::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+ }
+ 
+ button::before {
+  content: "";
+  background: #000;
+  width: 120%;
+  left: -10%;
+  transform: skew(30deg);
+  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+ }
+ 
+ button:hover::before {
+  transform: translate3d(100%, 0, 0);
+ }
+ 
+
 .header {
-    color: darkblue;
-    font: bold;
-    font-family: sans-serif;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  color: white;
+  font-family: "Jacques Francois Shadow";
+  font-size: 2em;
+  height: 50px;
+  padding: 75px;
+  display: flex;
+  justify-content: center; 
+}
+
+h2 {
+  margin: 0px;
 }
 
 .navbar {
+  font-family: "Jacques Francois";
+  text-align: center;
+  margin-top: 0px;
   background-color: #333;
   padding: 10px;
   display: flex;
@@ -25,11 +108,5 @@ body {
   text-decoration: none;
   font-size: 18px;
   padding: 8px 16px;
-}
-
-.image-container {
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
+  flex: 1;
 }
